syntax = "proto3";

package api.grpc.statistic.statistic_broadcaster;

import "google/protobuf/duration.proto";
import "api/grpc/statistic/data.proto";

//! API сервера статистики
service SysStatBroadcaster {
	//! Подписа на рассылку статистики
    rpc Subscribe(StatParams) returns (stream SysStat);
}

//! Параметры рассылки статистики
message StatParams {
    google.protobuf.Duration sending_period = 1;        ///< Период отправки статистики
    google.protobuf.Duration collecting_period = 2;     ///< Период накопления статистики
}

//! Данные статистики
message SysStat {
    data.CPUUsage cpu_usage = 1;		///< Использование CPU
    data.DiskUsage disk_usage = 2;		///< Использование дискового пространства
    data.IOStat io_stat = 3;			///< Статистика операций ввода/вывода
    data.LoadAvg load_avg = 4;			///< Средняя нагрузка
    data.NodeUsage node_usage = 5;		///< Использование inode
}

